--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
   <h1>Hello World!</h1>
   <p>This is an example of a simple HTML page with one paragraph.</p>
+  <a href="url">link text</a>
 </body>
 
 </html>
